--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^52.0.42",
     "expo-blur": "~14.0.3",
     "expo-constants": "^17.0.8",
+    "expo-dev-client": "~5.0.19",
     "expo-font": "^13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
@@ -34,15 +35,16 @@
     "react-dom": "18.3.1",
     "react-native": "^0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-dev-client": "~5.0.19"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
@@ -50,8 +52,7 @@
     "jest-expo": "^52.0.6",
     "react-native-asset": "^2.1.1",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3",
-    "@react-native-community/cli": "latest"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
